syntax = "proto3";

package stats;

option go_package = "github.com/intergral/deep/modules/querier/stats";

message Stats {
  // The sum of all wall time spent in the querier to execute the query.
  int64 wall_time = 1;
  // The number of series fetched for the query
  uint64 fetched_series_count = 2;
  // The number of bytes of the chunks fetched for the query
  uint64 fetched_chunk_bytes = 3;
}
